--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>QR Code Scanner PWA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://rawgit.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 
 <body>
