--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </head>
 
 <body>
-    <div id="reader" style="width:300px;height:300px"></div>
-    <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
-    <input type="text" id="requestStatus" readonly placeholder="Request Status">
+    <div id="reader" style="width:300px;height:300px">
+        <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
+        <input type="text" id="requestStatus" readonly placeholder="Request Status">
+    </div>
+
     <select id="dropdown">
         <option value="" disabled selected>Select an zone</option>
     </select>
