--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 
 <body>
     <div id="reader" style="width:300px;height:300px"></div>
-    <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
-    <input type="text" id="requestStatus" readonly placeholder="Request Status">
-    <select id="dropdown">
-        <option value="" disabled selected>Select an zone</option>
-    </select>
+    <div>
+        <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
+        <input type="text" id="requestStatus" readonly placeholder="Request Status">
+        <select id="dropdown">
+            <option value="" disabled selected>Select an zone</option>
+        </select>
+    </div>
+
     <script>
         window.onload = function () {
             let qrCodeResult = '';
