--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            width: 100%;
+        }
+
+        #reader,
+        #qrCodeResult,
+        #requestStatus,
+        #dropdown {
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
-    <div id="reader" style="width:300px;height:300px"></div>
-    <div>
-        <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
-        <input type="text" id="requestStatus" readonly placeholder="Request Status">
-        <select id="dropdown">
-            <option value="" disabled selected>Select an zone</option>
-        </select>
-    </div>
+    <div id="reader" style="width:100%;"></div>
+    <input type=" text" id="qrCodeResult" readonly placeholder="QR Code Result">
+    <input type="text" id="requestStatus" readonly placeholder="Request Status">
+    <select id="dropdown">
+        <option value="" disabled selected>Select an zone</option>
+    </select>
 
     <script>
         window.onload = function () {
