--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-    <div id="reader" style="width:100%;"></div>
-    <input type=" text" id="qrCodeResult" readonly placeholder="QR Code Result">
+    <div id="reader" style="width:300px;height:300px"></div>
+    <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
     <input type="text" id="requestStatus" readonly placeholder="Request Status">
     <select id="dropdown">
         <option value="" disabled selected>Select an zone</option>
