--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: 100%;
+            /* width: 100%; */
         }
 
         #reader,
         #qrCodeResult,
         #requestStatus,
         #dropdown {
-            width: 100%;
+            width: 75%;
         }
     </style>
 </head>
