--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            /* width: 100%; */
         }
 
         #reader,
@@ -19,12 +18,13 @@
         #requestStatus,
         #dropdown {
             width: 75%;
+            font-size: 2em;
         }
     </style>
 </head>
 
 <body>
-    <div id="reader" style="width:300px;height:300px"></div>
+    <div id="reader" style="width:300px;"></div>
     <input type="text" id="qrCodeResult" readonly placeholder="QR Code Result">
     <input type="text" id="requestStatus" readonly placeholder="Request Status">
     <select id="dropdown">
