--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>QR Code Scanner PWA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://unpkg.com/html5-qrcode"></script>
+    <link rel="manifest" href="/manifest.json">
     <style>
         body {
             display: flex;
