--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        'Authorization': `Bearer 45|WmQk5OfwWWBJkist3MjPYk8pOK7OgSQjXSNX3ek2e34b2711`
                     },
                     body: JSON.stringify({ qrCode: qrCodeResult, selectedOption: selectedOption }),
                 })
@@ -82,16 +83,27 @@
                     });
             }
             function getZones() {
-                fetch('https://your-url.com')
+                fetch('https://api.efcloud.app/api/v1/projects/39/access-points?include=readers', {
+                    headers: {
+                        'Authorization': `Bearer 45|WmQk5OfwWWBJkist3MjPYk8pOK7OgSQjXSNX3ek2e34b2711`
+                    }
+                })
                     .then(response => response.json())
                     .then(data => {
                         let dropdown = document.getElementById('dropdown');
-                        data.forEach(item => {
+                        let nameSlugList = []; // Create an empty list to store the name and slug tuples
+                        data.data.forEach(item => { // Loop through each item in the data
+                            let name = item.name; // Get the name
+                            let slug = item.slug; // Get the slug
+                            nameSlugList.push([name, slug]); // Add the name and slug as a tuple to the list
+
                             let option = document.createElement('option');
-                            option.value = item.value;
-                            option.text = item.text;
+                            option.value = 1;
+                            option.text = item.name;
                             dropdown.add(option);
                         });
+                        console.log(nameSlugList); // Log the list to the console
+                        document.getElementById('requestStatus').value = "GET Success";
                     })
                     .catch((error) => {
                         console.error('GET Error:', error)
