--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 let dropdown = document.getElementById('dropdown');
                 let selectedOption = dropdown.options[dropdown.selectedIndex].value;
 
-                fetch('https://api.efcloud.app/api/v1/projects/39/access-points/${selectedOption}/readers?name=${gateway_id}&identifier=${gateway_id}', {
+                fetch('https://api.efcloud.app/api/v1/projects/39/access-points/' + selectedOption + '/readers?name=' + gateway_id + '&identifier=' + gateway_id, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
