--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <title>WALDO ZONES CONFIG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+
     <script src="https://unpkg.com/html5-qrcode"></script>
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-startup-image" href="images/icons-512.png"
-        media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
 
-    <link rel="apple-touch-startup-image"
+    <!-- <link rel="apple-touch-startup-image" href="images/icons-512.png"
+        media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"> -->
+
+    <link rel="apple-touch-startup-image" href="images/splash-screen-iphone-mini.png"
+        media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <!-- <link rel="apple-touch-startup-image"
         media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
-        href="/images/icons-512.png">
+        href="/images/icons-512.png"> -->
     <style>
         body {
             display: flex;
