--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <link rel="apple-touch-startup-image" href="images/icons-512.png"
         media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"> -->
 
-    <link rel="apple-touch-startup-image" href="images/splash-screen-iphone-mini.png"
+    <link rel="apple-touch-startup-image" href="images/icons-512.png"
         media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
     <!-- <link rel="apple-touch-startup-image"
         media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
