commented out splash page code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <title>WALDO ZONES CONFIG</title>
-    <link rel="manifest" href="/manifest.json">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-startup-image" href="/images/splash.png"
-        media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- // Splash page not working...
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-startup-image" href="/images/splash.png" // for iPhone mini
+        media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"> -->
 
     <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
