added top image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+    <img src="images/icons-192.png" alt="Waldo" style="width: 100px; height: 100px;">
     <div id="reader" style="width:300px;"></div>
     <input type="text" id="qrCodeResult" readonly placeholder="Scan Result">
     <input type="text" id="requestStatus" readonly placeholder="Request Status">
