--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
+        .container {
+            width: 100%;
+            padding-right: 0;
+            padding-left: 0;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
         body {
             display: flex;
             flex-direction: column;
@@ -28,7 +36,7 @@
         #qrCodeResult,
         #requestStatus,
         #dropdown {
-            width: 75%;
+            width: 100%;
             font-size: 1em;
         }
     </style>
