--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <script>
         let rootUrlPost = 'https://api.efcloud.app/api/v1/projects/39/access-points/'
-        let rootUrlGet = 'https://api.efcloud.app/api/v1/projects/39/access-points?include=readers'
+        let rootUrlGet = 'https://api.efcloud.app/api/v1/projects/39/access-points?include=readers&limit=150'
 
         let authToken = 'Bearer 45|WmQk5OfwWWBJkist3MjPYk8pOK7OgSQjXSNX3ek2e34b2711'
 
