config for new event

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </div>
 
     <script>
-        let rootUrlPost = 'https://api.efcloud.app/api/v1/projects/39/access-points/'
-        let rootUrlGet = 'https://api.efcloud.app/api/v1/projects/39/access-points?include=readers&limit=150'
+        let rootUrlPost = 'https://api.gramercy.cloud/api/v1/projects/zelis-kntv/zelis-waldo/access-points/'
+        let rootUrlGet = 'https://api.gramercy.cloud/api/v1/projects/zelis-kntv/zelis-waldo/project-locations?include=access_points&limit=150'
 
-        let authToken = 'Bearer 45|WmQk5OfwWWBJkist3MjPYk8pOK7OgSQjXSNX3ek2e34b2711'
+        let authToken = 'Bearer 263|w2ACBgLgfkPlOsjQSDxLuKHNcW4NNyqoeQcsLMcP0f35a2c6'
 
         window.onload = function () {
             let qrCodeResult = '';
